Attempted fix nr2 for background image stuttering when scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
   font-family: "Nunito", sans-serif;
   font-size: 16px;
   color: white;
-  background: url("img/background.jpg") no-repeat center center fixed;
+  background: url("img/backgroundSmall.jpg") no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -485,8 +485,10 @@ footer {
 }
 
 @media only screen and (min-width: 1024px) {
-  body {
+  html {
     background-position: right 40% bottom 75%;
+    background-image: url("img/background.jpg");
+    background-attachment: fixed;
   }
 
   .nav-menu {
